kubernetes_wordpress/gateway/gateway_no_https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: wordpress
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
  namespace: wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gateway
  http: 
     - match:      
       - authority:
          exact: "zen1one.korakakis.com"
       route:
       - destination:
           host: wordpress
           port:
             number: 80
  
     - match:      
       - authority:
          exact: "kiali.moto-book.com"
       route:
       - destination:
           host: kiali.istio-system.svc.cluster.local
           port:
             number: 20001
     - match:      
       - authority:
          exact: "grafana.korakakis.com"
       route:
       - destination:
           host: grafana.istio-system.svc.cluster.local
           port:
             number: 3000
